[package]
name = "psoc6-pac"
version = "0.1.1"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Dave Humphries <humphriesdj@gmail.com"]
edition = "2018"
description = "Peripheral Access Crate for Cypress PSoC 6 MCUs"
documentation = "https://docs.rs/psoc6-pac/"
repository = "https://github.com/diagonalDave/psoc6-pac.git"
keywords = ["cypress", "psoc6", "pac"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"
exclude = ["svd"]

[badges]
travis-ci = { repository = "diagonalDave/psoc6-pac" }
maintenance = { status = "actively-developed" }

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.7.6"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.1"

[features]
rt = ["cortex-m-rt/device"]


[package.metadata.docs.rs]
features = ['rt']


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
pre-release-commit-message = "Release {{version}}"
publish=false

# Change the changelog's `Unreleased` section to refer to this release and
# prepend a new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased\n"
replace = """
## Unreleased

1. Provided CM0+ interrupts gated by #[cfg(armv6m)] - these have been added by hand so it the pac is regenerated they will need to be reinstated.

## [{{version}} - {{date}}](https://github.com/diagonalDave/psoc6-pac/releases/tag/{{version}})
"""

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'psoc6-pac = "[a-z0-9\\.-]+"'
replace = 'psoc6-pac = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/psoc6-pac/[a-z0-9\\.-]+"
replace = "https://docs.rs/psoc6-pac/{{version}}"
